--- a/MyFirstAvatar/Packages/manifest.json
+++ b/MyFirstAvatar/Packages/manifest.json
@@ -1,5 +1,5 @@
 {
-    "dependencies": {
+  "dependencies": {
     "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-10.25.4.tgz",
     "com.unity.cloud.gltfast": "6.8.0",
     "com.unity.collab-proxy": "2.5.2",
@@ -8,6 +8,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.unity.xr.arfoundation": "5.1.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
